modified cart logic

--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -7,24 +7,11 @@
         <span class="section-title">My Cart</span>
       </div>
 
-      <!-- 📍 Default Address Display Block -->
-      <!-- <div class="cart-address-box">
-        <h4 class="address-title">Delivery Address</h4>
-
-        <div class="default-address" *ngIf="defaultAddress">
-          <p>
-            {{ defaultAddress.fullName }}, {{ defaultAddress.phone }}, {{ defaultAddress.city }}, {{ defaultAddress.pincode }}
-            <br />
-            {{ defaultAddress.state }}, {{ defaultAddress.country }}
-          </p>
-          <button class="btn small-link" (click)="openEstimateDialog()">Change / Estimate Delivery</button>
-        </div>
-
-        <div *ngIf="!defaultAddress">
-          <p class="text-muted">No address selected.</p>
-          <button class="btn small-link" (click)="openEstimateDialog()">Add Address & Estimate</button>
-        </div>
-      </div> -->
+      <div class="cart-actions">
+        <button class="delete-all-btn" (click)="deleteAllItems()">
+          🗑️ Delete All
+        </button>
+      </div>
 
 
       <div class="cart-item-wrapper" *ngFor="let item of cartItemsSignal()">
