--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -284,6 +284,13 @@
     }
   }
 
+  .no-results {
+    padding: 12px;
+    text-align: center;
+    color: #666;
+    font-size: 14px;
+  }
+
   .loader-spinner {
     width: 18px;
     height: 18px;
