--- a/src/app/features/auth/_components/change-password/change-password.component.scss
+++ b/src/app/features/auth/_components/change-password/change-password.component.scss
@@ -30,21 +30,25 @@
         }
       }
 
-      .eye-toggle {
-        background: transparent;
-        border: none;
+      .password-wrapper {
+        position: relative;
+      }
+
+      .password-input {
+        padding-right: 40px; // Space for the eye icon
+      }
+
+      .toggle-icon {
         position: absolute;
-        right: 10px;
+        right: 6px;
         top: 50%;
         transform: translateY(-50%);
-        cursor: pointer;
-        font-size: 16px;
-        color: #666;
-
-        &:hover {
-          color: #99663D;
-        }
+        padding: 0;
+        background: transparent;
+        border: none;
+        color: grey;
       }
+
     }
 
     .error {
@@ -61,9 +65,11 @@
       .weak {
         color: #e74c3c;
       }
+
       .medium {
         color: #f39c12;
       }
+
       .strong {
         color: #27ae60;
       }
