--- a/src/app/features/auth/_components/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/_components/forgot-password/forgot-password.component.html
@@ -1,5 +1,8 @@
-<form [formGroup]="form" (ngSubmit)="step() === 'otp' ? sendOtp() : resetPassword()" class="reset-password-form">
-
+<form
+  [formGroup]="form"
+  (ngSubmit)="step() === 'otp' ? sendOtp() : resetPassword()"
+  class="reset-password-form"
+>
   <div class="form-group">
     <label>Send OTP via</label>
     <select formControlName="otp_type">
@@ -18,6 +21,8 @@
     <input type="text" formControlName="mobile" placeholder="Enter mobile number" />
   </div>
 
+  <hr *ngIf="step() === 'reset'" style="margin: 1.5rem 0; border-color: #eee;" />
+
   <ng-container *ngIf="step() === 'reset'">
     <div class="form-group">
       <label>OTP</label>
@@ -26,7 +31,11 @@
 
     <div class="form-group password-group">
       <label>New Password</label>
-      <input [type]="hidePassword() ? 'password' : 'text'" formControlName="password" placeholder="New password" />
+      <input
+        [type]="hidePassword() ? 'password' : 'text'"
+        formControlName="password"
+        placeholder="New password"
+      />
       <mat-icon class="eye-icon" (click)="toggleHidePassword()">
         {{ hidePassword() ? 'visibility_off' : 'visibility' }}
       </mat-icon>
@@ -34,7 +43,11 @@
 
     <div class="form-group password-group">
       <label>Confirm Password</label>
-      <input [type]="hideConfirm() ? 'password' : 'text'" formControlName="confirm_password" placeholder="Confirm password" />
+      <input
+        [type]="hideConfirm() ? 'password' : 'text'"
+        formControlName="confirm_password"
+        placeholder="Confirm password"
+      />
       <mat-icon class="eye-icon" (click)="toggleHideConfirm()">
         {{ hideConfirm() ? 'visibility_off' : 'visibility' }}
       </mat-icon>
