added design changes for apply coupon and tooltip for shipping fee

--- a/src/app/features/auth/_components/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/_components/forgot-password/forgot-password.component.html
@@ -1,8 +1,7 @@
-<form
-  [formGroup]="form"
-  (ngSubmit)="step() === 'otp' ? sendOtp() : resetPassword()"
-  class="reset-password-form"
->
+<form [formGroup]="form" (ngSubmit)="step() === 'otp' ? sendOtp() : resetPassword()" class="reset-password-form">
+
+  <span class="back-to-login" (click)="goBackToLogin()">← Back to Login</span>
+
   <div class="form-group">
     <label>Send OTP via</label>
     <select formControlName="otp_type">
@@ -31,11 +30,7 @@
 
     <div class="form-group password-group">
       <label>New Password</label>
-      <input
-        [type]="hidePassword() ? 'password' : 'text'"
-        formControlName="password"
-        placeholder="New password"
-      />
+      <input [type]="hidePassword() ? 'password' : 'text'" formControlName="password" placeholder="New password" />
       <mat-icon class="eye-icon" (click)="toggleHidePassword()">
         {{ hidePassword() ? 'visibility_off' : 'visibility' }}
       </mat-icon>
@@ -43,11 +38,8 @@
 
     <div class="form-group password-group">
       <label>Confirm Password</label>
-      <input
-        [type]="hideConfirm() ? 'password' : 'text'"
-        formControlName="confirm_password"
-        placeholder="Confirm password"
-      />
+      <input [type]="hideConfirm() ? 'password' : 'text'" formControlName="confirm_password"
+        placeholder="Confirm password" />
       <mat-icon class="eye-icon" (click)="toggleHideConfirm()">
         {{ hideConfirm() ? 'visibility_off' : 'visibility' }}
       </mat-icon>
