--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -21,7 +21,7 @@
       </ng-container>
 
       <ng-template #forgotPasswordBlock>
-        <app-forgot-password></app-forgot-password>
+        <app-forgot-password (showRegisterPage)="showPasswordLoginMethod()"></app-forgot-password>
       </ng-template>
     </ng-template>
   </div>
