--- a/src/app/features/auth/_components/forgot-password/forgot-password.component.scss
+++ b/src/app/features/auth/_components/forgot-password/forgot-password.component.scss
@@ -86,4 +86,22 @@
   .cooldown {
     color: #666;
   }
+
+  .back-to-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.5rem;
+    font-size: 14px;
+    font-weight: bold;
+    color: #682f12;
+    cursor: pointer;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: #844026;
+      text-decoration: underline;
+    }
+  }
+
 }
