--- a/src/app/features/cart/_components/apply-coupon-dialog/apply-coupon-dialog.component.scss
+++ b/src/app/features/cart/_components/apply-coupon-dialog/apply-coupon-dialog.component.scss
@@ -90,4 +90,12 @@
       }
     }
   }
+
+  .error-message {
+    margin-top: 0.4rem;
+    font-size: 0.85rem;
+    color: #d32f2f;
+    font-weight: 500;
+  }
+
 }
