--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ html, body { height: 100vh; }
   background-color: #fff !important;
   color: #222;
   border-radius: 12px;
-  padding: 24px;
+  // padding: 24px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
 }
 
