--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -11,43 +11,63 @@
         <button class="delete-all-btn" (click)="deleteAllItems()">
           🗑️ Delete All
         </button>
+
+        <div class="overlay-loader" *ngIf="isDeletingAll">
+          <div class="spinner"></div>
+        </div>
+
       </div>
 
 
-      <div class="cart-item-wrapper" *ngFor="let item of cartItemsSignal()">
-        <img [src]="getImagePath(item.product?.images![0].image)" alt="{{ item.product?.name }}"
-          (error)="onImageError($event)" />
+      <ng-container *ngIf="!isCartLoading; else cartLoadingSkeleton">
+        <div class="cart-item-wrapper" *ngFor="let item of cartItemsSignal()">
+          <img [src]="getImagePath(item.product?.images![0].image)" alt="{{ item.product?.name }}"
+            (error)="onImageError($event)" />
 
-        <div class="product-info">
-          <div class="brand-name">{{ getCategoryNameOfProduct(item.product?.categoryId!) }}</div>
-          <div class="product-title" (click)="navigateToProductPage(item.product!)">{{ item.product?.name }}</div>
+          <div class="product-info">
+            <div class="brand-name">{{ getCategoryNameOfProduct(item.product?.categoryId!) }}</div>
+            <div class="product-title" (click)="navigateToProductPage(item.product!)">{{ item.product?.name }}</div>
 
-          <!-- Quantity Selectors -->
-          <div class="selectors">
-            <div class="qty-controls">
-              <button class="qty-btn" (click)="updateQuantity(item, 'decrement')"
-                [disabled]="item.quantity! <= 1 || isLoading(item?.id!)">–</button>
+            <!-- Quantity Selectors -->
+            <div class="selectors">
+              <div class="qty-controls">
+                <button class="qty-btn" (click)="updateQuantity(item, 'decrement')"
+                  [disabled]="item.quantity! <= 1 || isLoading(item?.id!)">–</button>
 
-              <input class="qty-input" type="number" [value]="item.quantity" min="1" [max]="item.product?.maxQuantity"
-                (input)="onManualQtyInput(item, $event)" [disabled]="isLoading(item?.id!)" />
+                <input class="qty-input" type="number" [value]="item.quantity" min="1" [max]="item.product?.maxQuantity"
+                  (input)="onManualQtyInput(item, $event)" [disabled]="isLoading(item?.id!)" />
 
-              <button class="qty-btn" (click)="updateQuantity(item, 'increment')"
-                [disabled]="item.quantity! >= item.product?.maxQuantity! || isLoading(item?.id!)">+</button>
+                <button class="qty-btn" (click)="updateQuantity(item, 'increment')"
+                  [disabled]="item.quantity! >= item.product?.maxQuantity! || isLoading(item?.id!)">+</button>
 
-              <div class="spinner" *ngIf="isLoading(item?.id!)"></div>
+                <div class="spinner" *ngIf="isLoading(item?.id!)"></div>
+              </div>
+            </div>
+
+            <div class="price-block">
+              <span class="new-price">₹{{ item.basePrice }}</span>
+              <span class="old-price">GST: {{ item.gstRate }}%</span>
+              <span class="discount">Tax: {{ item.taxAmount }}</span>
+              <span class="discount">Total: ₹{{ item.subtotal }}</span>
             </div>
           </div>
 
-          <div class="price-block">
-            <span class="new-price">₹{{ item.basePrice }}</span>
-            <span class="old-price">GST: {{ item.gstRate }}%</span>
-            <span class="discount">Tax: {{ item.taxAmount }}</span>
-            <span class="discount">Total: ₹{{ item.subtotal }}</span>
-          </div>
-        </div>
+          <button class="remove-button" title="Remove this item" (click)="removeItem(item.id!)">
+            <ng-container *ngIf="deletingItemIds.has(item.id!); else closeIcon">
+              <div class="spinner mini"></div>
+            </ng-container>
+            <ng-template #closeIcon>✕</ng-template>
+          </button>
 
-        <button class="remove-button" (click)="removeItem(item.id!)" title="Remove this item">✕</button>
-      </div>
+        </div>
+      </ng-container>
+
+
+      <ng-template #cartLoadingSkeleton>
+        <div class="cart-skeleton-wrapper">
+          <div class="cart-item-skeleton" *ngFor="let i of [1,2,3]"></div>
+        </div>
+      </ng-template>
 
       <!-- ✅ CART NAVIGATION BUTTONS -->
       <div class="cart-navigation-buttons" *ngIf="showNavigationButtons">
@@ -73,5 +93,7 @@
       <button class="browse-btn" routerLink="/">Continue Shopping</button>
     </div>
   </ng-template>
+
+
 
 </div>
