--- a/src/app/features/cart/_components/wishlist/wishlist.component.scss
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.scss
@@ -217,3 +217,31 @@
     width: 100%;
   }
 }
+
+.spinner.mini {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  border-top: 2px solid #333;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+}
+
+.overlay-loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
