--- a/src/app/features/product/_components/product-list/product-list.component.html
+++ b/src/app/features/product/_components/product-list/product-list.component.html
@@ -17,7 +17,8 @@
         <button class="scroll-button left" (click)="scrollLeft('topSellersScroll')">&#10094;</button>
         <div class="product-scroll-container" #topSellersScroll>
           <app-product *ngFor="let product of topSellers(); trackBy: trackByProductId" [product]="product"
-            [wishlistItems]="wishlistItems" (wishlistToggle)="addToWishlist($event)"></app-product>
+            [wishlistItems]="wishlistItems" [isUpdatingWishlist]="isUpdatingWishlist(product.id!)"
+            (wishlistToggle)="addToWishlist($event)"></app-product>
         </div>
         <button class="scroll-button right" (click)="scrollRight('topSellersScroll')">&#10095;</button>
       </div>
@@ -42,7 +43,8 @@
         <button class="scroll-button left" (click)="scrollLeft('weekTopSellersScroll')">&#10094;</button>
         <div class="product-scroll-container" #weekTopSellersScroll>
           <app-product *ngFor="let product of weekTopSellers(); trackBy: trackByProductId" [product]="product"
-            [wishlistItems]="wishlistItems" (wishlistToggle)="addToWishlist($event)"></app-product>
+            [wishlistItems]="wishlistItems" [isUpdatingWishlist]="isUpdatingWishlist(product.id!)"
+            (wishlistToggle)="addToWishlist($event)"></app-product>
         </div>
         <button class="scroll-button right" (click)="scrollRight('weekTopSellersScroll')">&#10095;</button>
       </div>
@@ -68,7 +70,8 @@
         <button class="scroll-button left" (click)="scrollLeft('newArrivalsScroll')">&#10094;</button>
         <div class="product-scroll-container" #newArrivalsScroll>
           <app-product *ngFor="let product of newArrivals(); trackBy: trackByProductId" [product]="product"
-            [wishlistItems]="wishlistItems" (wishlistToggle)="addToWishlist($event)"></app-product>
+            [wishlistItems]="wishlistItems" [isUpdatingWishlist]="isUpdatingWishlist(product.id!)"
+            (wishlistToggle)="addToWishlist($event)"></app-product>
         </div>
         <button class="scroll-button right" (click)="scrollRight('newArrivalsScroll')">&#10095;</button>
       </div>
@@ -125,7 +128,8 @@
         <!-- 🧾 Scrollable Row of Product Cards -->
         <div class="product-scroll-container" #scrollContainer>
           <app-product *ngFor="let product of productsList(); trackBy: trackByProductId" [product]="product"
-            [wishlistItems]="wishlistItems" (wishlistToggle)="addToWishlist($event)"></app-product>
+            [wishlistItems]="wishlistItems" [isUpdatingWishlist]="isUpdatingWishlist(product.id!)"
+            (wishlistToggle)="addToWishlist($event)"></app-product>
         </div>
 
         <!-- ▶️ Scroll Right Button -->
