--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -146,3 +146,18 @@
     transform: translateY(0px);
   }
 }
+
+.spinner.mini {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  border-top: 2px solid #333;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
