--- a/src/app/features/product/_components/view-product/view-product.component.scss
+++ b/src/app/features/product/_components/view-product/view-product.component.scss
@@ -439,3 +439,20 @@
     opacity: 1;
   }
 }
+
+.button-spinner {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  border-top: 2px solid #333;
+  border-radius: 50%;
+  display: inline-block;
+  animation: spin 0.6s linear infinite;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
